Fix Bug #55095 innodb_file_format_check: no warning for illegal value

rb://397 approved by Sunny Bains